<resources>

    <string name="app_name">Book Store App</string>

    <!-- Label for overflow menu option that inserts fake book data into the app  -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app -->
    <string name="action_delete_all_entries">Delete All Book</string>

    <!-- Title for the activity to add a new product -->
    <string name="editor_activity_title_new_product">Add A Product</string>

    <!-- Label for editor menu option to save book and leave editor  -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book  -->
    <string name="action_delete">Delete</string>

    <!-- Label for product name information in the editor  -->
    <string name="product_name">Product Name</string>

    <!-- Label for price information in the editor  -->
    <string name="product_price">Price</string>

    <!-- Label for quantity information in the editor  -->
    <string name="product_quantity">Quantity</string>

    <!-- Label for supplier name information in the editor  -->
    <string name="supplier_name">Supplier Name</string>

    <!-- Label for supplier phone number information in the editor  -->
    <string name="supplier_phone_number">Supplier Ph No</string>

    <!-- Text hint(text only) in the editor -->
    <string name="hint_text_only">Text Only</string>

    <!-- Text hint(numbers only) in the editor -->
    <string name="hint_numbers_only">Numbers Only</string>

</resources>
